2017-04-03 Aurelien Degremont <aurelien.degremont@cea.fr>
	* Smart analysis of nid_map updates (ticket #111)

2017-03-30 Aurelien Degremont <aurelien.degremont@cea.fr>
	* Fold 'client' and 'router' options in XMF files (ticket #177)

2015-10-27 Florent Thery <florent.thery@atos.net>
	* Detect and display target migrated status (ticket #14)

2015-10-26 Aurelien Degremont <aurelien.degremont@cea.fr>
	* Do not wrongly prevent module unloading (ticket #194)

2015-10-26 Aurelien Degremont <aurelien.degremont@cea.fr>
	* Display error messages on stderr (ticket #193)

2015-05-27 Dominique Martinet <dominique.martinet@cea.fr>
	* Fix tune errors by adding -n to echo into /proc/fs files (ticket #192)

2015-04-29 Aurelien Degremont <aurelien.degremont@cea.fr>
	* Release: 1.4

2015-04-27 Aurelien Degremont <aurelien.degremont@cea.fr>
	* Fix stacktrace when start/umount command failed (ticket #190)

2015-04-16 Aurelien Degremont <aurelien.degremont@cea.fr>
	* Fix stacktrace with update command (ticket #189)

2015-04-10 Aurelien Degremont <aurelien.degremont@cea.fr>
	* Add dry-run option (ticket #146)

2015-04-09 Aurelien Degremont <aurelien.degremont@cea.fr>
	* Padding in ranges in model file is supported (ticket #188)
	* Simplify tuning enforcement when starting and mounting (ticket #33)
	* Display better messages when tuning fails (ticket #50)

2015-04-08 Aurelien Degremont <aurelien.degremont@cea.fr>
	* Display a message when load/unloading modules (ticket #182)

2015-03-10 Aurelien Degremont <aurelien.degremont@cea.fr>
	* Add --fanout command line option (ticket #175)
	* Correct return code for failed stop and umount (ticket #186)

2015-03-03 Aurelien Degremont <aurelien.degremont@cea.fr>
	* Clean tuning.conf.example (ticket #184)

2014-10-02 Aurelien Degremont <aurelien.degremont@cea.fr>
	* Fix 'status' perf regression introduced by #83 (ticket #185)

2014-09-03 Florent Thery <florent.thery@bull.net>
	* Trigger different actions based on modified options (ticket #180)