@@ -26,30 +26,128 @@ from Shine.Lustre.Server import ServerGroup
 from Shine.Lustre.FileSystem import FileSystem, Server, FSRemoteError, \
                                     MOUNTED, OFFLINE, MIGRATED
 
-class SimpleFileSystemTest(unittest.TestCase):
-    """Tests which do not setup a real Lustre filesystem."""
+
+def _graph2obj(graph):
+    try:
+        return [_graph2obj(item) for item in graph]
+    except TypeError:
+        result = {}
+        for key in ('NAME', 'comp', 'action', 'config_file'):
+            if hasattr(graph, key):
+                result[key] = getattr(graph, key)
+        return result
+
+class FakeTunings(object):
+    def __init__(self):
+        self.filename = 'foo'
+
+
+class PrepareTest(unittest.TestCase):
+    """Verify graph from _prepare()"""
 
     def setUp(self):
-        self.fs = FileSystem('testfs')
+        self.fs = FileSystem('prepare')
+        self.remotesrv = Server('remote', ['remote@tcp'])
+        self.localsrv = Server(Utils.HOSTNAME, ['%s@tcp' % Utils.HOSTNAME])
+        self.fs.local_server = self.localsrv
+
+    def test_simple_local_action(self):
+        """prepare a simple action on a local component"""
+        comp = self.fs.new_target(self.localsrv, 'mgt', 0, '/dev/fakedev')
+        graph = self.fs._prepare('start')
+
+        self.assertEqual(_graph2obj(graph),
+                         [[[{'NAME': 'start', 'comp': comp}],
+                           [{'NAME': 'load modules'},
+                            {'NAME': 'load modules'}]]])
+        self.assertEqual(graph[0][1][0]._modname, 'lustre')
+
+    def test_simple_remote_action(self):
+        """prepare a simple action on a remote component"""
+        self.fs.new_target(self.remotesrv, 'mgt', 0, '/dev/fakedev')
+        graph = self.fs._prepare('start')
+
+        self.assertEqual(_graph2obj(graph),
+                         [[[{'NAME': 'proxy', 'action': 'start'}]]])
+        self.assertEqual(str(graph[0][0][0].nodes), 'remote')
+
+    def test_proxy_tunings(self):
+        """prepare is ok with or without tunings"""
+        self.fs.new_target(self.remotesrv, 'mgt', 0, '/dev/fakedev')
+
+        # Without tunings
+        graph = self.fs._prepare('dummy', tunings=None)
+        self.assertEqual(_graph2obj(graph),
+                         [[[{'NAME': 'proxy', 'action': 'dummy'}]]])
+        self.assertEqual(str(graph[0][0][0].nodes), 'remote')
+
+        # With tunings
+        graph = self.fs._prepare('dummy', tunings=FakeTunings())
+        self.assertEqual(_graph2obj(graph),
+                         [[[{'NAME': 'install', 'config_file': 'foo'},
+                            {'NAME': 'proxy', 'action': 'dummy'}]]])
+        self.assertEqual(str(graph[0][0][1].nodes), 'remote')
+
+    def test_local_tunings(self):
+        """prepare is ok with or without tunings"""
+        comp = self.fs.new_target(self.localsrv, 'mgt', 0, '/dev/fakedev')
+
+        # Without tunings
+        graph = self.fs._prepare('start', tunings=None)
+        self.assertEqual(_graph2obj(graph),
+                         [[[{'NAME': 'start', 'comp': comp}],
+                           [{'NAME': 'load modules'},
+                            {'NAME': 'load modules'}]]])
+        self.assertEqual(graph[0][1][0]._modname, 'lustre')
+
+        # With tunings
+        graph = self.fs._prepare('start', tunings=FakeTunings())
+        self.assertEqual(_graph2obj(graph),
+                         [[[{'NAME': 'start', 'comp': comp}],
+                           [{'NAME': 'load modules'},
+                            {'NAME': 'load modules'}], []]])
+        self.assertEqual(graph[0][1][0]._modname, 'lustre')
+        self.assertEqual(graph[0][2].NAME, 'tune')
+
+    def test_need_unload(self):
+        """prepare handles need_unload correctly"""
+        comp = self.fs.new_target(self.localsrv, 'mgt', 0, '/dev/fakedev')
+
+        # Without module unload
+        graph = self.fs._prepare('stop', need_unload=False)
+        self.assertEqual(_graph2obj(graph),
+                         [[[{'NAME': 'stop', 'comp': comp}]]])
+
+        # With module unload
+        graph = self.fs._prepare('stop', need_unload=True)
+        self.assertEqual(_graph2obj(graph),
+                         [[[{'NAME': 'stop', 'comp': comp}],
+                           {'NAME': 'unload modules'}]])
+
+
+class SimpleFileSystemTest(unittest.TestCase):
+    """Tests which do not setup a real Lustre filesystem."""
 
     def test_install_nothing(self):
         """install only using local node does nothing"""
         class MyFS(FileSystem):
-            def _run_actions(self):
+            def _run_actions(obj):
                 self.fail("should not be called")
+        fs = MyFS('testfs')
         srv = Server(Utils.HOSTNAME, ['%s@tcp' % Utils.HOSTNAME])
-        self.fs.local_server = srv
-        self.fs.new_target(srv, 'mgt', 0, '/dev/fakedev')
-        self.fs.install(fs_config_file=Utils.makeTempFilename())
+        fs.local_server = srv
+        fs.new_target(srv, 'mgt', 0, '/dev/fakedev')
+        fs.install(fs_config_file=Utils.makeTempFilename())
 
     def test_install_unreachable(self):
         """install on unreachable nodes raises an error"""
+        fs = FileSystem('testfs')
         badsrv1 = Server('badnode1', ['127.0.0.2@tcp'])
         badsrv2 = Server('badnode2', ['127.0.0.3@tcp'])
-        self.fs.new_target(badsrv1, 'mgt', 0, '/dev/fakedev')
-        self.fs.new_client(badsrv2, '/testfs')
+        fs.new_target(badsrv1, 'mgt', 0, '/dev/fakedev')
+        fs.new_client(badsrv2, '/testfs')
         try:
-            self.fs.install(fs_config_file=Utils.makeTempFilename())
+            fs.install(fs_config_file=Utils.makeTempFilename())
         except FSRemoteError, ex:
             self.assertEqual(str(ex.nodes), 'badnode[1-2]')
             self.assertEqual(ex.rc, 1)
